# phys

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
deploy/linux/: io.github.angelfor3v3r.phys.desktop  io.github.angelfor3v3r.phys.yml  phys.desktop
deploy/windows/: phys.manifest  phys.rc
src/: imconfig.hpp  main.cpp
